--- a/3-Schriften.tex
+++ b/3-Schriften.tex
@@ -1,22 +1,26 @@
 \chapter{Schriften}
 \label{ch:Schriften}
 
+%% Irgendwo in diesem Kapitel sollte das microtype-Paket gewürdigt werden.
+
+\section{Schriftschnitte}
+\label{sec:Schnitte}
+
 \section{Kerning und Spacing}
 \label{sec:KernSpace}
 
 \section{Ligaturen}
 
 \section{Liniensystem}
+\label{sec:Linien}
 
 \section{Serifen}
-
-\section{Schriftschnitte}
-\label{sec:Schnitte}
 
 \section{Ziffern}
 \label{sec:Ziffern}
 
-%% - Beispiele: Garamond, Palatino, Minion, Optima/Classico, Times, Helvetica
+\section{Beispiele}
+%% Garamond, Palatino, Minion, Optima/Classico, Times, Helvetica
 
 %%% Local Variables:
 %%% mode: latex
