--- a/4-Seitenlayout.tex
+++ b/4-Seitenlayout.tex
@@ -6,6 +6,7 @@
 %% - Schriftgrößen mischen
 %% - Kopf-/Fußzeilen/Pagination
 %% - andere Formate (z.B. Plakate, Titelseiten, …)
+%% - Blocksatz, Silbentrennung
 
 %%% Local Variables:
 %%% mode: latex
