--- a/3-Schriften.tex
+++ b/3-Schriften.tex
@@ -20,6 +20,8 @@
 \label{sec:Ziffern}
 
 \section{Beispiele}
+
+{\fontfamily{pplj}\selectfont Palatino 1234 \emph{kursiv} \textsc{kapitälchen}}
 %% Garamond, Palatino, Minion, Optima/Classico, Times, Helvetica
 
 %%% Local Variables:
