--- a/1-Zeichensetzung.tex
+++ b/1-Zeichensetzung.tex
@@ -94,17 +94,14 @@ aller Art auftauchen.  Hier eine kleine Auswahl:
 verschiedene Aufgaben, die gerne verwechselt werden.  Typographisch
 unterscheiden wir die Striche nach ihrer Länge.
 
-Diese Längen werden als Anteil an einem \emph{Geviert} angegeben. Die Einheit
-eines Gevierts geht zurück auf die Zeit des Bleisatzes, uns soll folgende
-Faustregel genügen: Ein Geviert ist, je nach Schriftart, etwa das \smallfrac43-fache
-der Höhe eines Großbuchstabens (vgl. \cref{sec:Linien}).\todo{Bin noch
-  unzufrieden mit dieser Beschreibung, wollte es aber so knapp wie möglich
-  halten, weil das ja eigentlich Teil von §\,3 ist.}
+Diese Längen werden als Anteil an einem \emph{Geviert} angegeben~--
+eine Einheit, die auf die Zeit des Bleisatzes zurückgeht.  Uns soll
+hier folgende Faustregel genügen: Ein Geviert ist, je nach Schriftart,
+etwa das \smallfrac43-fache der Höhe eines Großbuchstabens
+(vgl. \cref{sec:Linien}).
 
 \subsection{Viertelgeviertstrich}
-Der\todo{Ich fand es mit Unterabschnitten jetzt doch deutlich schicker. Ich bin
-  aber Deiner Idee nachgekommen und habe den Abstand unter der Unterüberschrift
-  verkleinert.} Viertelgeviertstrich \Char{-} ist der kürzeste aller üblichen
+Der Viertelgeviertstrich \Char{-} ist der kürzeste aller üblichen
 Striche.  Er wird auf Deutsch sowie auf Englisch als \emph{Trennstrich} bei
 Worttrennungen an Zeilenumbrüchen verwendet.  Auf Deutsch ist er außerdem der
 \emph{Bindestrich} in nicht zusammenge\-schriebenen Komposita, bspw. in
@@ -133,14 +130,15 @@ Dabei ist zu beachten, dass er \emph{nicht} in der Phrase »von … bis
 Streckenangaben steht ein Halbgeviertstrich: »Auf der Strecke
 Köln--Karlsruhe fährt der \acr{ICE} 203.«
 
-Er kann auch, in Form eines \emph{Spiegelstriches}, als Aufzählungszeichen
-verwendet werden (meistens sieht das aber nicht so gut aus und
-Aufzählungs\emph{punkte} \Char{\textbullet} sind besser):
-\begin{itemize}[label=--,nosep]
-\item Es gibt sone und
-\item solche, und
-\item dann gibt's noch ganz andere!
-\end{itemize}
+Er kann auch als Aufzählungszeichen verwendet werden (dann nennt man
+ihn manchmal »Spiegelstrich«):
+ \begin{itemize}[label=--,nosep]
+ \item Es gibt sone und
+ \item solche, und
+ \item dann gibt's noch ganz andere!
+ \end{itemize}
+ Meistens sieht das aber nicht so gut aus und Aufzählungs\emph{punkte}
+ \Char{\textbullet} sind besser.
 
 Im Deutschen ist der Halbgeviertstrich, umschlossen von Leerzeichen,
 auch der \emph{Gedankenstrich}: »Ein Gedankenstrich sieht ganz gut
