--- a/1-Zeichensetzung.tex
+++ b/1-Zeichensetzung.tex
@@ -202,13 +202,13 @@ Das im Formelsatz verwendete \emph{Minuszeichen} \Char{$-$} ist semantisch
 verschieden von den vorher beschriebenen Text-Strichen; in den meisten
 Schriftarten sieht es auch anders aus.\footnote{Im Formelsatz verwendet \LaTeX\ 
   \emph{nochmal} andere Zeichen: Das korrekte Minus\-zeichen in der Schriftart
-  dieses Dokuments ist \Char{\textminus}; das des Formelsatzes ist \Char{$–$}.}
+  dieses Dokuments ist \Char{\textminus}; das des Formelsatzes ist \Char{$-$}.}
 Seine Breite entspricht der des Pluszeichens, und es ist vertikal zentriert:
 $1+2-3=0$.
 
 Auch das \emph{Gleichheitszeichen} \Char{$=$} besteht natürlich aus horizontalen
 Strichen~-- nämlich \emph{Zwillings-Linien}, wie sein Erfinder
-\name{\textsc{robert recorde} (ca. 1510--1558)} schrieb:
+\name{Robert Recorde} (ca. 1510--1558) schrieb:
 \begin{displayquote}
   \foreignlanguage{british}{And to avoide the tediouse repetition of
     these woordes : is equalle to : I will sette as I doe often in
