The \Char{} and \tab{} macros are not meant to take »\par«s in their argument, so don’t allow that.

--- a/layout.tex
+++ b/layout.tex
@@ -118,8 +118,8 @@
 %% Einzelne Zeichen
 %\fboxsep0pt
 %\newcommand{\Char}[1]{\colorbox{black!10}{\strut\textcolor{Maroon}{\hspace*{1px}#1\hspace*{1px}}}}
-\newcommand{\Char}[1]{\textcolor{Maroon}{#1}}
-\newcommand{\tab}[1]{\figureversion{tab}{#1}}
+\newcommand*{\Char}[1]{\textcolor{Maroon}{#1}}
+\newcommand*{\tab}[1]{\figureversion{tab}{#1}}
 
 \usepackage[margin    =20pt,
             font      ={footnotesize},
