Re-include enumitem.

--- a/layout.tex
+++ b/layout.tex
@@ -40,6 +40,9 @@
 %% Wird für die Kapitelziffern benötigt.
 \usepackage{marginnote}
 
+%% Sinnvoll konfigurierbare Listen
+\usepackage{enumitem}
+
 %% Text nicht vertikal strecken
 \raggedbottom
 
