--- a/1-Zeichensetzung.tex
+++ b/1-Zeichensetzung.tex
@@ -198,12 +198,10 @@ Tastatur erzeugen kann.
 
 \subsection{Minus- und Gleichheitszeichen}
 
-Das im Formelsatz verwendete \emph{Minuszeichen} \Char{$-$} ist semantisch
-verschieden von den vorher beschriebenen Text-Strichen; in den meisten
-Schriftarten sieht es auch anders aus.\footnote{Im Formelsatz verwendet \LaTeX\ 
-  \emph{nochmal} andere Zeichen: Das korrekte Minus\-zeichen in der Schriftart
-  dieses Dokuments ist \Char{\textminus}; das des Formelsatzes ist \Char{$-$}.}
-Seine Breite entspricht der des Pluszeichens, und es ist vertikal zentriert:
+Das im Formelsatz verwendete \emph{Minuszeichen} \Char{$-$} ist
+semantisch verschieden von den vorher beschriebenen Text-Strichen; in
+den meisten Schriftarten sieht es auch anders aus.  Seine Breite
+entspricht der des Pluszeichens, und es ist vertikal zentriert:
 $1+2-3=0$.
 
 Auch das \emph{Gleichheitszeichen} \Char{$=$} besteht natürlich aus horizontalen
@@ -217,6 +215,13 @@ Strichen~-- nämlich \emph{Zwillings-Linien}, wie sein Erfinder
 
   \quad---~Robert Recorde, \emph{The Whetstone of Witte} (1557)
 \end{displayquote}
+
+Für diese Formelzeichen gibt es bei \LaTeX\ eine weitere
+Unterscheidung zwischen zwei Varianten: es gibt jeweils eine für
+Verwendung im Text sowie eine für Verwendung in Formelsatz.  Das
+korrekte Minus- und Gleichheitszeichen in der Schriftart dieses
+Dokuments im Text sind \Char{\textminus} bzw. \Char{=}; die des
+Formelsatzes sind \Char{$-$} bzw. \Char{$=$}.
 
 % In gebrochenen Schriften sieht außerdem der Trennstrich einem
 % Gleichheitszeichen ähnlich.  Wir beschäftigen uns hier aber nicht mit
